--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "info": "vuepress info"
   },
   "devDependencies": {
+    "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "vuepress": "^2.0.0-beta.27"
   },
-  "license": "CC-BY-SA-4.0"
+  "license": "CC-BY-SA-4.0",
+  "dependencies": {
+    "@vuepress/theme-default": "^2.0.0-rc.21"
+  }
 }
