--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "info": "vuepress info"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "^2.0.0-rc.9",
-    "vuepress": "^2.0.0-beta.27"
+    "@vuepress/bundler-vite": "^2.0.0-rc.15",
+    "sass-embedded": "^1.79.3",
+    "vuepress": "^2.0.0-rc.15"
   },
   "license": "CC-BY-SA-4.0",
   "dependencies": {
-    "@vuepress/theme-default": "^2.0.0-rc.21"
+    "@vuepress/theme-default": "^2.0.0-rc.49"
   }
 }
